--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,12 @@
             <h3>I'm in the AppComponent!</h3>
             <hr>
             <app-servers></app-servers> 
+            <app-warning-alert></app-warning-alert>
+            <app-success-alert></app-success-alert>
+            <hr>
+            <app-user></app-user>
+            <hr>
+            <app-details></app-details>
             <!-- <div app-servers></div> -->
             <!-- <div class='app-servers'></div> -->
         </div>       
