--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server Component</p>
+<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]='{online: serverStatus === "online"}'>Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
