--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
             <app-details></app-details>
             <!-- <div app-servers></div> -->
             <!-- <div class='app-servers'></div> -->
+            <p appBasicHighlight>style me with basic hightlight directive</p>
+            <p appBetterHighlight [defaultColor]="'#EBF5FB'" highlightColor="orange">  style me with better hightlight directive</p>
+        <app-directive-example></app-directive-example>
         </div>       
     </div>
 </div>
